# IntelWall

./: .gitignore  .gitmodules  README.md
Command_line_interface/IntelWall-CLI/: pyproject.toml
Command_line_interface/IntelWall-CLI/scripts/: user_authorization.py
IntelBoard/: README.md  test.py
IntelGuard/: README.md  main.py
IntelPolicies(IP)/: IP-README.md
WallMin/: README.md
WallMin/IntelWall (CLI)/: README.md
WallMin/IntelWall (CLI)/Scripts/: Main.py
WallMin/IntelWall (CLI)/Scripts/User Interface/: IntelWall.py  User_Authentication.py  credentials_validation.py  ui_components.py
WallMin/IntelWall (CLI)/Scripts/User Interface/Rules/Add/: main.py
WallMin/IntelWall (CLI)/Scripts/User Interface/Rules/Delete/: main.py
WallMin/IntelWall (CLI)/Scripts/User Interface/Rules/Modify/: main.py
WallMin/IntelWall (CLI)/Scripts/User Interface/Rules/Review_and_Analyse/: main.py
